<resources>
    <string name="app_name">ShoppingList</string>

    <string name="open">Open</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="shop">Shop</string>
    <string name="newitem">New</string>
    <string name="file_not_found">File not found</string>

    <string name="edTitle_hint">Title</string>
    <string name="edDescription_hint">Description</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="bold">Bold</string>
    <string name="color">Color</string>

    <string name="new_list_name">New List Name</string>
    <string name="new_list">New List</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="delete_que">Do you want delete this item?</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="clear_list">Clear list</string>
    <string name="delete_list">Delete list</string>
    <string name="share_list">Share list</string>

    <string name="new_item">New item</string>
    <string name="save_item">Save item</string>
    <string name="empty">Empty</string>

    <string name="update_item">Update item</string>
    <string name="name">Name</string>
    <string name="info">Info</string>
    <string name="share_by">Share by</string>

    <string name="general">General</string>
    <string name="choose_note_style">Choose note style</string>
    <string name="choose_time_format">Choose time format</string>
    <string name="remove_ads">Remove ads</string>
    <string name="remove_ads_summary">Remove all ads from app</string>
    <string name="choose_theme">Choose theme</string>
    <string name="theme_settings">Theme settings</string>
    <string name="text_settings">Note text settings</string>
    <string name="title_text_size">Title text size</string>
    <string name="content_text_size">Content text size</string>

    <string name="pref_linear">Linear</string>
</resources>