<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/new_item"
        android:id="@+id/new_item"
        android:icon="@drawable/ic_add"
        app:showAsAction = "ifRoom|collapseActionView"
        android:actionLayout="@layout/edit_action_layout"
        android:orderInCategory="1"
        />
    <item
        android:title="@string/save_item"
        android:id="@+id/save_item"
        android:icon="@drawable/ic_save"
        app:showAsAction = "ifRoom"
        android:orderInCategory="2"
        />


    <item
        android:title="@string/delete_list"
        android:id="@+id/delete_list"
        android:icon="@drawable/ic_delete_b"
        />
    <item
        android:title="@string/clear_list"
        android:id="@+id/clear_list"
        android:icon="@drawable/ic_delete_b"
        />
    <item
        android:title="@string/share_list"
        android:id="@+id/share_list"
        android:icon="@drawable/ic_delete_b"
        />

</menu>