<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <group android:id="@+id/sorting" >

    <item
        android:id="@+id/settings"
        android:title="@string/settings"
        android:icon = "@drawable/ic_settings"
        app:showAsAction = "ifRoom"
        />
    <item
        android:id="@+id/notes"
        android:title="@string/notes"
        android:icon = "@drawable/ic_note"
        app:showAsAction = "ifRoom"
        />
    <item
        android:id="@+id/shop_list"
        android:title="@string/shop"
        android:icon = "@drawable/ic_shop"
        app:showAsAction = "ifRoom"
        />
    </group>

    <item
        android:id="@+id/new_item"
        android:title="@string/newitem"
        android:icon = "@drawable/ic_new_item"
        app:showAsAction = "ifRoom"
        />
</menu>